fix: ensure video plays on iOS devices

--- a/public/style.css
+++ b/public/style.css
@@ -13,11 +13,11 @@ html, body {
 }
 
 video {
-  background-color: #2f2;
-  border-radius: 50%;
   width: 20px;
   height: 20px;
-  margin: 4px;
+  position: absolute;
+  bottom: 0;
+  z-index: -1;
 }
 
 pre {
